solve overflowing elements by adding a max-width and a overflow: scroll to the .amount-right element

--- a/.learning_paths/javascript-fundamentals/tip-calculator-app-main/styles.css
+++ b/.learning_paths/javascript-fundamentals/tip-calculator-app-main/styles.css
@@ -200,7 +200,8 @@
 	& .amount-right{
 		font-size: 2.5rem;
 		color: var(--strong-cyan);
-		margin-left: 5rem;
+		max-width: 200px;
+		overflow: scroll;
 	}
 
 	& .amount-left{
